Arrumando docker composer file, melhorando documentacao
